--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
     "install": "^0.13.0",
     "notistack": "^3.0.1",
     "npm": "^10.5.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "validator": "^13.11.0"
   },
   "devDependencies": {
